[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/components/state_machine.gd" type="Script" id=1]
[ext_resource path="res://src/components/touch_drag.gd" type="Script" id=2]
[ext_resource path="res://assets/tilemap-characters_packed.png" type="Texture" id=3]
[ext_resource path="res://src/scenes/Player/Jump.gd" type="Script" id=4]
[ext_resource path="res://src/scenes/Player/Player.gd" type="Script" id=5]
[ext_resource path="res://src/scenes/Player/Run.gd" type="Script" id=6]
[ext_resource path="res://src/components/follow_point.gd" type="Script" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 24, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 24, 24, 24 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=4]

[node name="Player" type="Node2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 5 )

[node name="TouchDrag" type="Node" parent="."]
script = ExtResource( 2 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 1 )

[node name="PlayerSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "run"

[node name="States" type="Node" parent="."]

[node name="Jump" type="Node" parent="States"]
script = ExtResource( 4 )

[node name="Run" type="Node" parent="States"]
script = ExtResource( 6 )

[node name="FollowPoint" type="Node" parent="."]
script = ExtResource( 7 )
velocity = 300
tolerance_distance = 50
max_distance = 30

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[connection signal="touch_released" from="TouchDrag" to="." method="_on_TouchDrag_touch_released"]
[connection signal="jump_ended" from="States/Jump" to="." method="_on_Jump_jump_ended"]
